# fast_xml

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Makefile.mix  README.md  configure  configure.ac  mix.exs  rebar.config  rebar.config.script  rebar.config.script.in  vars.config.in
.github/workflows/: ci.yml  hexpm-release.yml
c_src/: counted_allocs.inc  expat_erl.c  fxml.c  fxml_stream.c  xml.c  xml_stream.c
include/: fxml.hrl  fxml_gen.hrl  xml.hrl  xml_gen.hrl  xml_gen_lib.hrl
lib/: fast_xml.ex
priv/lib/: .keepme
spec/: README.md  fxmlrpc_codec.spec  xmlrpc_codec.spec
specs/: xmpp.spec
src/: fast_xml.app.src  fast_xml.erl  fxml.erl  fxml_app.erl  fxml_gen.erl  fxml_gen_pt.erl  fxml_stream.erl  fxml_sup.erl  fxmlrpc.erl  fxmlrpc_codec.erl  fxmlrpc_codec_external.erl  p1_xml.app.src  p1_xmlrpc.erl  xml.app.src  xml.erl  xml_app.erl  xml_gen.erl  xml_stream.erl  xml_sup.erl  xml_util.erl  xmlrpc.erl  xmlrpc_codec.erl  xmlrpc_decode.erl  xmlrpc_encode.erl
test/: fxml_test.erl  test_helper.exs  xml_test.erl
test/elixir/: fast_xml_test.exs  fxml_test.exs  mix.exs  test_helper.exs  xml_test.exs
tests/: billionlaughs.py
